fix: overflow

--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ html {
 body {
   font-family: 'Open Sans', sans-serif;
   position: relative;
-  min-width: var(--min, 320px);
+  width: calc(100% - 0.01px);
+  min-width: calc(var(--min, 320px) - 0.01px);
   max-width: var(--max, 1980px);
   margin: 0 auto;
   background-color: var(--base, #fff);
